admission/ValidatingAdmissionPolicy/policies/startupprobe-httpget-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: startupprobe-httpget-host-initcontainers
  annotations:
    kubeapt.io/uuid: "f49ff543-8ed7-441b-9fb2-69dc4ed5338e"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
